# Mavoxel

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Shaders/: basic.fs  basic.gs  basic_color.gs  simple_voxel.fs
app/: CMakeLists.txt  main.cpp
app/Game/: Game.hpp
app/Generator/: VoxelMapGenerator.cpp  VoxelMapGenerator.hpp
exemple_main/: main_noise.cpp
exemple_main/Neural_Matrix/: Makefile  read_me.txt
exemple_main/Neural_Matrix/src/: main.cpp
exemple_main/Neural_Matrix/src/Neural/: Neural.cpp  Neural.hpp
exemple_main/Perlin_Terrain/src/: main.cpp
lib/Neural/: learningStruct.h  list.h  neuralStruct.h  vector.h
oldFiles/MakefileSupport/: Makefile
resources/Shaders/: basic_color.fs  basic_color.vert  basic_color.vert.spv  basic_color.vs  filter.frag  lightHelper.frag  materials.frag  octree.frag  octreeHelper.frag  octree_DEBUG.frag  octree_PRINT.frag  only_color.frag  only_color.frag.spv  only_color.fs  only_color.vert  only_color.vert.spv  only_color.vs  only_color_uni.frag.spv  only_color_uni.fs  only_color_uni.vert  only_color_uni.vert.spv  only_color_uni.vs  only_texPos.frag  only_texPos.frag.spv  only_texPos.fs  only_texPos.vert  only_texPos.vert.spv  only_texPos.vs  ray_tracing.frag  ray_tracing.frag.spv  raycastLight.frag  select_color.frag.spv  select_color.fs  simple_voxel.frag  simple_voxel.frag.spv  simple_voxel.fs  simple_voxel.vert  simple_voxel.vert.spv  simple_voxel.vs  sun_color.frag.spv  (+1 more)
resources/Shaders/Filter/: antiAliasing.frag  computeVelocity.frag  filter.frag  filterUniforms.frag  motionBlur.frag  taa.frag
resources/Shaders/Old/: basic.fs  basic_color.gs  only_color_uni.frag  only_color_uni.frag.spv  only_color_uni.vert.spv  only_texPos.frag  only_texPos.frag.spv  ray_tracing.frag.spv  ray_tracing_PRINT.frag  select_color.frag  select_color.frag.spv  simple_voxel.frag.spv  sun_color.frag  sun_color.frag.spv
resources/Shaders/RayTracing/: collisions.frag  enhancingEffects.frag  inputs.frag  materials.frag  octree.frag  octreeHelper.frag  rayTracing.frag  ray_tracing.frag  raycastLight.frag  structures.frag
ressources/Shaders/: basic.gs  basic.vs  basic_color.fs  basic_color.vs  simple_voxel.fs  simple_voxel.vs  sun_color.fs
src/: CMakeLists.txt  PerlinNoise.hpp  main.cpp
src/Collision/: AABB.cpp  AABB.hpp  CollisionFace.cpp  CollisionFace.hpp  CollisionInformations.hpp  Frustum.cpp  Frustum.hpp
src/Core/: Core.cpp  Core.hpp  DebugGlobal.cpp  DebugGlobal.hpp  Global.cpp  Global.hpp
src/Entity/: Entity.cpp  Entity.hpp  Player.cpp  Player.hpp
src/Environment/: Environment.hpp
src/Files/: DataFileConverter.hpp  FileHandler.cpp  FileHandler.hpp
src/Filter/: FilterRenderer.hpp
src/GLObject/: BufferTemplates.hpp  Camera.cpp  Camera.hpp  Drawable.cpp  Drawable.hpp  DrawableContainer.hpp  DrawableMultiContainer.hpp  DrawableSingle.hpp  GLObject.cpp  GLObject.hpp  Shader.cpp  Shader.hpp  Texture3D.hpp
src/GraphicObjects/: BufferTemplates.hpp  Camera.cpp  Drawable.cpp  Drawable.hpp  DrawableContainer.hpp  DrawableMultiContainer.hpp  DrawableSingle.hpp  RenderChainHandler.hpp
src/Helper/: FrustumPoints.cpp  FrustumPoints.hpp  ThreadPool.hpp
src/Helper/Benchmark/: Profiler.cpp  Profiler.hpp
src/Material/: Material.hpp
src/Mesh/: DebugVoxel.cpp  DebugVoxel.hpp  Face.cpp  Face.hpp  LightVoxel.cpp  LightVoxel.hpp  Lines.hpp  Mesh.cpp  Mesh.hpp  Plane.cpp  Plane.hpp  Voxel.cpp  Voxel.hpp
src/Mesh/Simple/: Quad.hpp
src/Neural/: Neural.cpp  Neural.hpp
src/Octree/: SparseVoxelOctree.cpp  SparseVoxelOctree.hpp  SparseVoxelOctreeHelper.hpp
src/Physics/: Gravity.cpp  Gravity.hpp  PhysicSystem.cpp  PhysicSystem.hpp
src/RayCasting/: RayCastingRenderer.hpp
src/Scenes/: RenderChainHandler.hpp  SceneInformation.hpp
src/World/: Chunk.cpp  Chunk.hpp  ChunkIndexer.cpp  ChunkIndexer.hpp  CoordinatesHelper.cpp  CoordinatesHelper.hpp  EntityManager.hpp  Generator.hpp  SimpleVoxel.cpp  SimpleVoxel.hpp  VoxelManager.hpp  World.cpp  World.hpp  WorldLoader.hpp  WorldPositionHelper.hpp
src/lib/: glad.cpp
vulkan_wrapper/: CMakeLists.txt  implementationHeaders.cpp
vulkan_wrapper/VulkanWrapper/: Allocator.cpp  Allocator.hpp  BufferWrapper.hpp  CommandBuffers.hpp  CommandPool.hpp  Configuration.hpp  DeadBufferHandler.hpp  DebugMessenger.cpp  DebugMessenger.hpp  Device.cpp  Device.hpp  Framebuffer.hpp  GraphicsPipeline.hpp  Instance.hpp  MultiShader.hpp  RenderPass.cpp  RenderPass.hpp  SSBO.hpp  SafeBufferWrapper.hpp  SceneRenderer.hpp  Shader.hpp  Surface.hpp  SwapChain.cpp  SwapChain.hpp  SynchronisationObjects.hpp  Texture.hpp  Texture3D.hpp  VertexData.hpp  VulkanWrapper.hpp  Window.cpp  Window.hpp
vulkan_wrapper/VulkanWrapper/Helper/: Buffer.hpp  Checker.hpp  Command.hpp  DebugMessengerHelper.hpp  Getter.hpp  Image.hpp  PhysicalDevices.hpp  QueueFamily.hpp  ShaderHelper.hpp  SwapChainHelper.hpp
